[package]
name = "bending"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
arg = "0.4.1"
image = "0.25.6"
time = "0.3.41"
wasm-bindgen = { version = "0.2.92", optional = true }
js-sys = { version = "0.3.62", optional = true }
node-sys = { version = "0.4.2", optional = true }


[lib]
crate-type = ["cdylib", "rlib"]



[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "console",
  'CssStyleDeclaration',
  'EventTarget',
  "Blob",
]
optional = true

[features]
default = ["enable_wasm"]
enable_wasm = [
  "wasm-bindgen",
  "web-sys",
  "js-sys",
  "node-sys",
]